made download functions in wrds_utils, wrds_compa

--- a/nbs/wrds_compa.ipynb
+++ b/nbs/wrds_compa.ipynb
@@ -26,9 +26,14 @@
    "outputs": [],
    "source": [
     "#|exports\n",
+    "from __future__ import annotations\n",
+    "from typing import List, Dict, Tuple, Callable\n",
+    "import os\n",
+    "\n",
     "import pandas as pd\n",
     "import numpy as np\n",
-    "import wrds "
+    "import wrds \n",
+    "from finsets import wrds_utils"
    ]
   },
   {
@@ -65,6 +70,143 @@
    "source": [
     "print(common_raw_vars())"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#|export\n",
+    "def download(vars: List[str]=common_raw_vars(),\n",
+    "             library: str='comp.funda', # WRDS Compustat library (must start with 'comp.')\n",
+    "             wrds_username: str=None, #If None, looks for WRDS_USERNAME with `os.getenv`, then prompts you if needed\n",
+    "             ) -> pd.DataFrame:\n",
+    "    \"\"\"Downloads `vars` from WRDS `library`\"\"\"\n",
+    "\n",
+    "    always_get_these = ['datadate', 'gvkey']\n",
+    "    vars = always_get_these + [x for x in vars if x not in always_get_these]\n",
+    "    sql_string=f\"\"\"select {','.join(vars)} from {library}\n",
+    "                        where indfmt='INDL' and datafmt='STD' and popsrc='D' and consol='C'\"\"\"\n",
+    "    \n",
+    "    return wrds_utils.download(sql_string, wrds_username)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Loading library list...\n",
+      "Done\n"
+     ]
+    }
+   ],
+   "source": [
+    "df = download(vars=['at'])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>datadate</th>\n",
+       "      <th>gvkey</th>\n",
+       "      <th>at</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>1961-12-31</td>\n",
+       "      <td>001000</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>1962-12-31</td>\n",
+       "      <td>001000</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>1963-12-31</td>\n",
+       "      <td>001000</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>1964-12-31</td>\n",
+       "      <td>001000</td>\n",
+       "      <td>1.416</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>1965-12-31</td>\n",
+       "      <td>001000</td>\n",
+       "      <td>2.310</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "     datadate   gvkey     at\n",
+       "0  1961-12-31  001000    NaN\n",
+       "1  1962-12-31  001000    NaN\n",
+       "2  1963-12-31  001000    NaN\n",
+       "3  1964-12-31  001000  1.416\n",
+       "4  1965-12-31  001000  2.310"
+      ]
+     },
+     "execution_count": null,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
