set eval to false for cells calling download

--- a/nbs/wrds_compa.ipynb
+++ b/nbs/wrds_compa.ipynb
@@ -107,6 +107,7 @@
     }
    ],
    "source": [
+    "#| eval: false\n",
     "df = download(vars=['at'])"
    ]
   },
@@ -191,6 +192,8 @@
     }
    ],
    "source": [
+    "#| eval: false\n",
+    "#| hide\n",
     "df.head()"
    ]
   },
