finished clean() in wrds_compa

--- a/nbs/wrds_compa.ipynb
+++ b/nbs/wrds_compa.ipynb
@@ -33,7 +33,9 @@
     "import pandas as pd\n",
     "import numpy as np\n",
     "import wrds \n",
-    "from finsets import wrds_utils"
+    "\n",
+    "import pandasmore as pdm\n",
+    "from finsets import wrds_utils, wrds_links"
    ]
   },
   {
@@ -108,7 +110,7 @@
    ],
    "source": [
     "#| eval: false\n",
-    "df = download(vars=['at'])"
+    "raw = download(vars=['at'])"
    ]
   },
   {
@@ -194,7 +196,7 @@
    "source": [
     "#| eval: false\n",
     "#| hide\n",
-    "df.head()"
+    "raw.head()"
    ]
   },
   {
@@ -202,14 +204,192 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "#| export\n",
+    "def clean(df: pd.DataFrame, # If None, downloads the entire comp.funda dataset\n",
+    "          ) -> pd.DataFrame:\n",
+    "    \n",
+    "    if df is None: df = download()\n",
+    "    df = wrds_links.merge_permno_into_gvkey(dset_using_gvkey=df)\n",
+    "    df = pdm.setup_panel(df, panel_ids='permno', time_var='datadate', freq='Y')\n",
+    "    return df "
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Loading library list...\n",
+      "Done\n"
+     ]
+    }
+   ],
+   "source": [
+    "#| eval: false\n",
+    "df = clean(raw)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th>datadate</th>\n",
+       "      <th>dtdate</th>\n",
+       "      <th>gvkey</th>\n",
+       "      <th>at</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>permno</th>\n",
+       "      <th>Ydate</th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>10000</th>\n",
+       "      <th>1986</th>\n",
+       "      <td>1986-10-31</td>\n",
+       "      <td>1986-10-31</td>\n",
+       "      <td>013007</td>\n",
+       "      <td>2.115</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th rowspan=\"4\" valign=\"top\">10001</th>\n",
+       "      <th>1986</th>\n",
+       "      <td>1986-06-30</td>\n",
+       "      <td>1986-06-30</td>\n",
+       "      <td>012994</td>\n",
+       "      <td>12.242</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1987</th>\n",
+       "      <td>1987-06-30</td>\n",
+       "      <td>1987-06-30</td>\n",
+       "      <td>012994</td>\n",
+       "      <td>11.771</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1988</th>\n",
+       "      <td>1988-06-30</td>\n",
+       "      <td>1988-06-30</td>\n",
+       "      <td>012994</td>\n",
+       "      <td>11.735</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1989</th>\n",
+       "      <td>1989-06-30</td>\n",
+       "      <td>1989-06-30</td>\n",
+       "      <td>012994</td>\n",
+       "      <td>18.565</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th rowspan=\"5\" valign=\"top\">93436</th>\n",
+       "      <th>2018</th>\n",
+       "      <td>2018-12-31</td>\n",
+       "      <td>2018-12-31</td>\n",
+       "      <td>184996</td>\n",
+       "      <td>29739.614</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2019</th>\n",
+       "      <td>2019-12-31</td>\n",
+       "      <td>2019-12-31</td>\n",
+       "      <td>184996</td>\n",
+       "      <td>34309.000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2020</th>\n",
+       "      <td>2020-12-31</td>\n",
+       "      <td>2020-12-31</td>\n",
+       "      <td>184996</td>\n",
+       "      <td>52148.000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2021</th>\n",
+       "      <td>2021-12-31</td>\n",
+       "      <td>2021-12-31</td>\n",
+       "      <td>184996</td>\n",
+       "      <td>62131.000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2022</th>\n",
+       "      <td>2022-12-31</td>\n",
+       "      <td>2022-12-31</td>\n",
+       "      <td>184996</td>\n",
+       "      <td>82338.000</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>349537 rows × 4 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                datadate     dtdate   gvkey         at\n",
+       "permno Ydate                                          \n",
+       "10000  1986   1986-10-31 1986-10-31  013007      2.115\n",
+       "10001  1986   1986-06-30 1986-06-30  012994     12.242\n",
+       "       1987   1987-06-30 1987-06-30  012994     11.771\n",
+       "       1988   1988-06-30 1988-06-30  012994     11.735\n",
+       "       1989   1989-06-30 1989-06-30  012994     18.565\n",
+       "...                  ...        ...     ...        ...\n",
+       "93436  2018   2018-12-31 2018-12-31  184996  29739.614\n",
+       "       2019   2019-12-31 2019-12-31  184996  34309.000\n",
+       "       2020   2020-12-31 2020-12-31  184996  52148.000\n",
+       "       2021   2021-12-31 2021-12-31  184996  62131.000\n",
+       "       2022   2022-12-31 2022-12-31  184996  82338.000\n",
+       "\n",
+       "[349537 rows x 4 columns]"
+      ]
+     },
+     "execution_count": null,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#| eval: false\n",
+    "#| hide\n",
+    "df "
+   ]
   },
   {
    "cell_type": "code",
