--- a/nbs/wrds_links.ipynb
+++ b/nbs/wrds_links.ipynb
@@ -62,15 +62,138 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Loading library list...\n",
+      "Done\n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>gvkey</th>\n",
+       "      <th>permno</th>\n",
+       "      <th>linktype</th>\n",
+       "      <th>linkprim</th>\n",
+       "      <th>linkdt</th>\n",
+       "      <th>linkenddt</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>001000</td>\n",
+       "      <td>25881.0</td>\n",
+       "      <td>LU</td>\n",
+       "      <td>P</td>\n",
+       "      <td>1970-11-13</td>\n",
+       "      <td>1978-06-30 00:00:00.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>001001</td>\n",
+       "      <td>10015.0</td>\n",
+       "      <td>LU</td>\n",
+       "      <td>P</td>\n",
+       "      <td>1983-09-20</td>\n",
+       "      <td>1986-07-31 00:00:00.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>001002</td>\n",
+       "      <td>10023.0</td>\n",
+       "      <td>LC</td>\n",
+       "      <td>C</td>\n",
+       "      <td>1972-12-14</td>\n",
+       "      <td>1973-06-05 00:00:00.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>001003</td>\n",
+       "      <td>10031.0</td>\n",
+       "      <td>LU</td>\n",
+       "      <td>C</td>\n",
+       "      <td>1983-12-07</td>\n",
+       "      <td>1989-08-16 00:00:00.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>001004</td>\n",
+       "      <td>54594.0</td>\n",
+       "      <td>LU</td>\n",
+       "      <td>P</td>\n",
+       "      <td>1972-04-24</td>\n",
+       "      <td>2023-06-25 08:30:23.381391</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "    gvkey   permno linktype linkprim     linkdt                  linkenddt\n",
+       "0  001000  25881.0       LU        P 1970-11-13 1978-06-30 00:00:00.000000\n",
+       "1  001001  10015.0       LU        P 1983-09-20 1986-07-31 00:00:00.000000\n",
+       "2  001002  10023.0       LC        C 1972-12-14 1973-06-05 00:00:00.000000\n",
+       "3  001003  10031.0       LU        C 1983-12-07 1989-08-16 00:00:00.000000\n",
+       "4  001004  54594.0       LU        P 1972-04-24 2023-06-25 08:30:23.381391"
+      ]
+     },
+     "execution_count": null,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#| eval: false\n",
+    "#| hide\n",
+    "df = gvkey_permno()\n",
+    "df.head()"
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "#| export\n",
+    "def merge_permno_into_gvkey(dset_using_gvkey: pd.DataFrame, # DataFrame using `gvkey` \n",
+    "          date_var: str='datadate', # Name of date variable in `dset_using_gvkey`\n",
+    "          date_var_format: str=\"%Y-%m-%d\", # Format of `date_var` to be passed to `pd.to_datetime`\n",
+    "          gvkey_permno_link: pd.DataFrame=None, # Concordance DataFrame; will get downloaded if None\n",
+    "          ) -> pd.DataFrame:\n",
+    "    \"\"\"Merges `permno` into `dset_using_gvkey` using `gvkey_permno_link`.\"\"\"\n",
+    "    \n",
+    "    if gvkey_permno_link is None: gvkey_permno_link = gvkey_permno()\n",
+    "    df = dset_using_gvkey.merge(gvkey_permno_link, how='left', on=['gvkey'])\n",
+    "    df = df.dropna(subset=[date_var])\n",
+    "\n",
+    "    df['dtdate'] = pd.to_datetime(df[date_var], format=date_var_format)    \n",
+    "    df = df[(df['dtdate']>=df['linkdt']) & (df['dtdate']<=df['linkenddt'])].copy()\n",
+    "    df = df.drop(columns = ['linktype', 'linkprim', 'linkdt', 'linkenddt'])\n",
+    "    return df"
+   ]
   },
   {
    "cell_type": "code",
