added features to compa that dont require any other modules

--- a/nbs/wrds_links.ipynb
+++ b/nbs/wrds_links.ipynb
@@ -38,24 +38,46 @@
    ]
   },
   {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Merging CRSP and COMPUSTAT"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Official documentation for this merge is [here](https://wrds-www.wharton.upenn.edu/pages/wrds-research/applications/linking-databases/linking-crsp-and-compustat/)\n",
+    "\n",
+    "Relevant information from that site:\n",
+    "\n",
+    "- Because TICKERs and CUSIPs change over time, most datasets use permanent identifiers to indicate the same securities and companies. For example, CRSP employs PERMNO to track stocks, Compustat uses GVKEY to follow companies, and a combination of GVKEY and IID is used to track securities. As indicated in the preceding table, both PERMNO and GVKEY (+IID) remain the same, regardless of changes in TICKER, CUSIP, and company names.\n",
+    "\n",
+    "- The CRSP/Compustat Merged Database (CCM) is comprised of CRSP and Compustat data, together with the link and link-history references between these two databases. The key product of CCM is a permanent identifier linking table (PERMNO to GVKEY+IID), though CCM is often wrongly mistaken as the merged product of CRSP stock market data with Compustat accounting data. From an end user’s perspective, CCM only adds a link of PERMNO and PERMCO to the Compustat database, so that Compustat items can be searched by CRSP identifiers.\n"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "#| export\n",
-    "def gvkey_permno(wrds_username: str=None,\n",
-    "                 ) -> pd.DataFrame:\n",
-    "    \n",
-    "    sql_string=f\"\"\"select gvkey, lpermno as permno, linktype, linkprim, linkdt, linkenddt\n",
-    "                    from crsp.ccmxpf_linktable\n",
-    "                    where substr(linktype,1,1)='L' and (linkprim ='C' or linkprim='P')\"\"\"\n",
-    "    \n",
-    "    df = wrds_utils.download(sql_string, wrds_username)\n",
-    "    df['linkdt'] = pd.to_datetime(df['linkdt'])\n",
-    "    df['linkenddt'] = pd.to_datetime(df['linkenddt'])\n",
-    "    df['linkenddt'] = df['linkenddt'].fillna(pd.to_datetime('today'))\n",
-    "    return df"
+    "def crspm_w_gvkey(wrds_username: str=None) -> pd.DataFrame:\n",
+    "    \"\"\"CRSP Monthly ids, with gvkeys\"\"\"\n",
+    "\n",
+    "    sql_string=\"\"\"SELECT a.date, a.permno, a.permco, c.gvkey, c.liid as iid\n",
+    "                  FROM crsp.msf a\n",
+    "                  INNER JOIN crsp.msenames b ON a.permno = b.permno\n",
+    "                                             AND a.date BETWEEN b.namedt AND b.nameendt \n",
+    "                  INNER JOIN crsp.ccmxpf_lnkhist c ON a.permno = c.lpermno \n",
+    "                                                   AND c.linktype IN ('LU','LC') AND c.linkprim IN ('P','C')\n",
+    "                                                   AND a.date BETWEEN c.linkdt AND COALESCE(c.linkenddt, CURRENT_DATE)\n",
+    "                \"\"\"\n",
+    "    return wrds_utils.download(sql_string, wrds_username)"
    ]
   },
   {
@@ -70,7 +92,18 @@
       "Loading library list...\n",
       "Done\n"
      ]
-    },
+    }
+   ],
+   "source": [
+    "#| eval: false\n",
+    "permno_gvkey = crspm_w_gvkey()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [
     {
      "data": {
       "text/html": [
@@ -92,71 +125,22 @@
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
-       "      <th>gvkey</th>\n",
+       "      <th>date</th>\n",
        "      <th>permno</th>\n",
-       "      <th>linktype</th>\n",
-       "      <th>linkprim</th>\n",
-       "      <th>linkdt</th>\n",
-       "      <th>linkenddt</th>\n",
+       "      <th>permco</th>\n",
+       "      <th>gvkey</th>\n",
+       "      <th>iid</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>001000</td>\n",
-       "      <td>25881.0</td>\n",
-       "      <td>LU</td>\n",
-       "      <td>P</td>\n",
-       "      <td>1970-11-13</td>\n",
-       "      <td>1978-06-30 00:00:00.000000</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>001001</td>\n",
-       "      <td>10015.0</td>\n",
-       "      <td>LU</td>\n",
-       "      <td>P</td>\n",
-       "      <td>1983-09-20</td>\n",
-       "      <td>1986-07-31 00:00:00.000000</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>001002</td>\n",
-       "      <td>10023.0</td>\n",
-       "      <td>LC</td>\n",
-       "      <td>C</td>\n",
-       "      <td>1972-12-14</td>\n",
-       "      <td>1973-06-05 00:00:00.000000</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>001003</td>\n",
-       "      <td>10031.0</td>\n",
-       "      <td>LU</td>\n",
-       "      <td>C</td>\n",
-       "      <td>1983-12-07</td>\n",
-       "      <td>1989-08-16 00:00:00.000000</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>001004</td>\n",
-       "      <td>54594.0</td>\n",
-       "      <td>LU</td>\n",
-       "      <td>P</td>\n",
-       "      <td>1972-04-24</td>\n",
-       "      <td>2023-06-25 08:30:23.381391</td>\n",
-       "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "    gvkey   permno linktype linkprim     linkdt                  linkenddt\n",
-       "0  001000  25881.0       LU        P 1970-11-13 1978-06-30 00:00:00.000000\n",
-       "1  001001  10015.0       LU        P 1983-09-20 1986-07-31 00:00:00.000000\n",
-       "2  001002  10023.0       LC        C 1972-12-14 1973-06-05 00:00:00.000000\n",
-       "3  001003  10031.0       LU        C 1983-12-07 1989-08-16 00:00:00.000000\n",
-       "4  001004  54594.0       LU        P 1972-04-24 2023-06-25 08:30:23.381391"
+       "Empty DataFrame\n",
+       "Columns: [date, permno, permco, gvkey, iid]\n",
+       "Index: []"
       ]
      },
      "execution_count": null,
@@ -166,9 +150,7 @@
    ],
    "source": [
     "#| eval: false\n",
-    "#| hide\n",
-    "df = gvkey_permno()\n",
-    "df.head()"
+    "permno_gvkey.head(0)"
    ]
   },
   {
@@ -177,22 +159,89 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#| export\n",
-    "def merge_permno_into_gvkey(dset_using_gvkey: pd.DataFrame, # DataFrame using `gvkey` \n",
-    "          date_var: str='datadate', # Name of date variable in `dset_using_gvkey`\n",
-    "          date_var_format: str=\"%Y-%m-%d\", # Format of `date_var` to be passed to `pd.to_datetime`\n",
-    "          gvkey_permno_link: pd.DataFrame=None, # Concordance DataFrame; will get downloaded if None\n",
-    "          ) -> pd.DataFrame:\n",
-    "    \"\"\"Merges `permno` into `dset_using_gvkey` using `gvkey_permno_link`.\"\"\"\n",
+    "def compa_w_permno(wrds_username: str=None) -> pd.DataFrame:\n",
+    "    \"\"\"COMPUSTAT Fundamentals Annual with permno's. As done by CCM.\"\"\"\n",
+    "    sql_string=f\"\"\"SELECT a.datadate, a.gvkey , b.lpermno as permno, b.lpermco as permco, b.liid as iid \n",
+    "                    FROM comp.funda a\n",
+    "                    INNER JOIN crsp.ccmxpf_lnkhist  b ON a.gvkey = b.gvkey\n",
+    "                    WHERE datadate BETWEEN b.linkdt AND COALESCE(b.linkenddt, CURRENT_DATE)\n",
+    "                            AND b.linktype IN ('LU','LC') AND b.linkprim IN ('P','C')\n",
+    "                            AND indfmt='INDL' AND datafmt='STD' AND popsrc='D' AND consol='C'\"\"\"\n",
     "    \n",
-    "    if gvkey_permno_link is None: gvkey_permno_link = gvkey_permno()\n",
-    "    df = dset_using_gvkey.merge(gvkey_permno_link, how='left', on=['gvkey'])\n",
-    "    df = df.dropna(subset=[date_var])\n",
-    "\n",
-    "    df['dtdate'] = pd.to_datetime(df[date_var], format=date_var_format)    \n",
-    "    df = df[(df['dtdate']>=df['linkdt']) & (df['dtdate']<=df['linkenddt'])].copy()\n",
-    "    df = df.drop(columns = ['linktype', 'linkprim', 'linkdt', 'linkenddt'])\n",
-    "    return df"
+    "    return wrds_utils.download(sql_string, wrds_username)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Loading library list...\n",
+      "Done\n"
+     ]
+    }
+   ],
+   "source": [
+    "#| eval: false\n",
+    "gvkey_permno = compa_w_permno()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>datadate</th>\n",
+       "      <th>gvkey</th>\n",
+       "      <th>permno</th>\n",
+       "      <th>permco</th>\n",
+       "      <th>iid</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "Empty DataFrame\n",
+       "Columns: [datadate, gvkey, permno, permco, iid]\n",
+       "Index: []"
+      ]
+     },
+     "execution_count": null,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#| eval: false\n",
+    "gvkey_permno.head(0)"
    ]
   },
   {
