forgot to export issuance_vars features in words_compa

--- a/nbs/wrds_compa.ipynb
+++ b/nbs/wrds_compa.ipynb
@@ -1321,6 +1321,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "#| export\n",
     "def issuance_vars(df: pd.DataFrame, \n",
     "                list_reqs: bool=False # If true, just returns a list of the required variables\n",
     "                ) -> pd.DataFrame:\n",
