--- a/nbs/wrds_links.ipynb
+++ b/nbs/wrds_links.ipynb
@@ -25,7 +25,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#|exports\n",
+    "#| exports\n",
     "from __future__ import annotations\n",
     "from typing import List, Dict, Tuple, Callable\n",
     "import os\n",
@@ -159,6 +159,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "#| export\n",
     "def compa_w_permno(wrds_username: str=None) -> pd.DataFrame:\n",
     "    \"\"\"COMPUSTAT Fundamentals Annual with permno's. As done by CCM.\"\"\"\n",
     "    sql_string=f\"\"\"SELECT a.datadate, a.gvkey , b.lpermno as permno, b.lpermco as permco, b.liid as iid \n",
@@ -246,7 +247,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -260,6 +261,18 @@
    "display_name": "python3",
    "language": "python",
    "name": "python3"
+  },
+  "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.9.16"
   }
  },
  "nbformat": 4,
