forgot to run nbdev_prepare

--- a/nbs/wrds_utils.ipynb
+++ b/nbs/wrds_utils.ipynb
@@ -45,7 +45,7 @@
     "def download(sql_string: str=None,\n",
     "             wrds_username: str=None, #If None, looks for WRDS_USERNAME with `os.getenv`, then prompts you if needed\n",
     "             ) -> pd.DataFrame:\n",
-    "    \"\"\"Downloads data from WRDS using the given `sql_string`\"\"\"\n",
+    "    \"\"\"Downloads data from WRDS using the given PostgreSQL `sql_string`\"\"\"\n",
     "\n",
     "    if wrds_username is None:\n",
     "        wrds_username = os.getenv('WRDS_USERNAME')\n",
