final edits on fred

--- a/nbs/fred.ipynb
+++ b/nbs/fred.ipynb
@@ -96,7 +96,7 @@
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
        "      <th>dtdate</th>\n",
-       "      <th>gdp</th>\n",
+       "      <th>Nominal GDP</th>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>Qdate</th>\n",
@@ -166,19 +166,19 @@
        "</div>"
       ],
       "text/plain": [
-       "           dtdate        gdp\n",
-       "Qdate                       \n",
-       "1946Q1 1946-01-01        NaN\n",
-       "1946Q2 1946-04-01        NaN\n",
-       "1946Q3 1946-07-01        NaN\n",
-       "1946Q4 1946-10-01        NaN\n",
-       "1947Q1 1947-01-01    243.164\n",
-       "...           ...        ...\n",
-       "2022Q1 2022-01-01  24740.480\n",
-       "2022Q2 2022-04-01  25248.476\n",
-       "2022Q3 2022-07-01  25723.941\n",
-       "2022Q4 2022-10-01  26137.992\n",
-       "2023Q1 2023-01-01  26529.774\n",
+       "           dtdate  Nominal GDP\n",
+       "Qdate                         \n",
+       "1946Q1 1946-01-01          NaN\n",
+       "1946Q2 1946-04-01          NaN\n",
+       "1946Q3 1946-07-01          NaN\n",
+       "1946Q4 1946-10-01          NaN\n",
+       "1947Q1 1947-01-01      243.164\n",
+       "...           ...          ...\n",
+       "2022Q1 2022-01-01    24740.480\n",
+       "2022Q2 2022-04-01    25248.476\n",
+       "2022Q3 2022-07-01    25723.941\n",
+       "2022Q4 2022-10-01    26137.992\n",
+       "2023Q1 2023-01-01    26529.774\n",
        "\n",
        "[309 rows x 2 columns]"
       ]
@@ -189,7 +189,7 @@
     }
    ],
    "source": [
-    "get_series('GDP')"
+    "get_series('GDP', label='Nominal GDP')"
    ]
   },
   {
@@ -202,7 +202,7 @@
     "def get_series_info(series: str=None, # FRED series name\n",
     "                    api_key: str=None # FRED api key. If None, will use os.getenv(\"FRED_API_KEY\")\n",
     "                    ) -> pd.Series:\n",
-    "    \"\"\"Get metadata for given `series` from FRED\"\"\"\n",
+    "    \"\"\"Get metadata from FRED for given `series` from FRED\"\"\"\n",
     "\n",
     "    if api_key is None: api_key = os.getenv(\"FRED_API_KEY\")\n",
     "    api = Fred(api_key=api_key)\n",
@@ -255,7 +255,7 @@
     "              nr_results: int=5, # How many results to output\n",
     "              api_key: str=None # FRED api key. If None, will use os.getenv(\"FRED_API_KEY\")\n",
     "              ) -> pd.DataFrame:\n",
-    "    \"\"\"Get metadata for given `series` from FRED\"\"\"\n",
+    "    \"\"\"Search FRED for a given `search_text`, sort by popularity and return only the first `nr_results`\"\"\"\n",
     "\n",
     "    if api_key is None: api_key = os.getenv(\"FRED_API_KEY\")\n",
     "    api = Fred(api_key=api_key)  \n",
@@ -382,42 +382,6 @@
        "      <td>2023-07-05 15:22:04-05:00</td>\n",
        "      <td>For further information regarding treasury con...</td>\n",
        "    </tr>\n",
-       "    <tr>\n",
-       "      <th>TEDRATE</th>\n",
-       "      <td>TED Spread (DISCONTINUED)</td>\n",
-       "      <td>68</td>\n",
-       "      <td>D</td>\n",
-       "      <td>1986-01-02</td>\n",
-       "      <td>2022-01-21</td>\n",
-       "      <td>TEDRATE</td>\n",
-       "      <td>2023-07-06</td>\n",
-       "      <td>2023-07-06</td>\n",
-       "      <td>Daily</td>\n",
-       "      <td>Percent</td>\n",
-       "      <td>%</td>\n",
-       "      <td>Not Seasonally Adjusted</td>\n",
-       "      <td>NSA</td>\n",
-       "      <td>2022-01-28 16:01:02-06:00</td>\n",
-       "      <td>Series is calculated as the spread between 3-M...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>TB3SMFFM</th>\n",
-       "      <td>3-Month Treasury Bill Minus Federal Funds Rate</td>\n",
-       "      <td>50</td>\n",
-       "      <td>M</td>\n",
-       "      <td>1954-07-01</td>\n",
-       "      <td>2023-06-01</td>\n",
-       "      <td>TB3SMFFM</td>\n",
-       "      <td>2023-07-06</td>\n",
-       "      <td>2023-07-06</td>\n",
-       "      <td>Monthly</td>\n",
-       "      <td>Percent</td>\n",
-       "      <td>%</td>\n",
-       "      <td>Not Seasonally Adjusted</td>\n",
-       "      <td>NSA</td>\n",
-       "      <td>2023-07-03 16:01:04-05:00</td>\n",
-       "      <td>Series is calculated as the spread between 3-M...</td>\n",
-       "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
@@ -428,48 +392,36 @@
        "TB3MS      3-Month Treasury Bill Secondary Market Rate, D...          77   \n",
        "DTB3       3-Month Treasury Bill Secondary Market Rate, D...          75   \n",
        "DGS3MO     Market Yield on U.S. Treasury Securities at 3-...          73   \n",
-       "TEDRATE                            TED Spread (DISCONTINUED)          68   \n",
-       "TB3SMFFM      3-Month Treasury Bill Minus Federal Funds Rate          50   \n",
        "\n",
-       "          frequency_short observation_start observation_end        id  \\\n",
-       "series id                                                               \n",
-       "TB3MS                   M        1934-01-01      2023-06-01     TB3MS   \n",
-       "DTB3                    D        1954-01-04      2023-07-03      DTB3   \n",
-       "DGS3MO                  D        1981-09-01      2023-07-03    DGS3MO   \n",
-       "TEDRATE                 D        1986-01-02      2022-01-21   TEDRATE   \n",
-       "TB3SMFFM                M        1954-07-01      2023-06-01  TB3SMFFM   \n",
+       "          frequency_short observation_start observation_end      id  \\\n",
+       "series id                                                             \n",
+       "TB3MS                   M        1934-01-01      2023-06-01   TB3MS   \n",
+       "DTB3                    D        1954-01-04      2023-07-03    DTB3   \n",
+       "DGS3MO                  D        1981-09-01      2023-07-03  DGS3MO   \n",
        "\n",
        "          realtime_start realtime_end frequency    units units_short  \\\n",
        "series id                                                              \n",
        "TB3MS         2023-07-06   2023-07-06   Monthly  Percent           %   \n",
        "DTB3          2023-07-06   2023-07-06     Daily  Percent           %   \n",
        "DGS3MO        2023-07-06   2023-07-06     Daily  Percent           %   \n",
-       "TEDRATE       2023-07-06   2023-07-06     Daily  Percent           %   \n",
-       "TB3SMFFM      2023-07-06   2023-07-06   Monthly  Percent           %   \n",
        "\n",
        "               seasonal_adjustment seasonal_adjustment_short  \\\n",
        "series id                                                      \n",
        "TB3MS      Not Seasonally Adjusted                       NSA   \n",
        "DTB3       Not Seasonally Adjusted                       NSA   \n",
        "DGS3MO     Not Seasonally Adjusted                       NSA   \n",
-       "TEDRATE    Not Seasonally Adjusted                       NSA   \n",
-       "TB3SMFFM   Not Seasonally Adjusted                       NSA   \n",
        "\n",
        "                        last_updated  \\\n",
        "series id                              \n",
        "TB3MS      2023-07-03 15:23:09-05:00   \n",
        "DTB3       2023-07-05 15:22:09-05:00   \n",
        "DGS3MO     2023-07-05 15:22:04-05:00   \n",
-       "TEDRATE    2022-01-28 16:01:02-06:00   \n",
-       "TB3SMFFM   2023-07-03 16:01:04-05:00   \n",
        "\n",
        "                                                       notes  \n",
        "series id                                                     \n",
        "TB3MS              Averages of Business Days, Discount Basis  \n",
        "DTB3                                          Discount Basis  \n",
-       "DGS3MO     For further information regarding treasury con...  \n",
-       "TEDRATE    Series is calculated as the spread between 3-M...  \n",
-       "TB3SMFFM   Series is calculated as the spread between 3-M...  "
+       "DGS3MO     For further information regarding treasury con...  "
       ]
      },
      "execution_count": null,
@@ -478,7 +430,7 @@
     }
    ],
    "source": [
-    "search(\"three month treasury bill\")"
+    "search(\"three month treasury bill\", nr_results=3)"
    ]
   },
   {
