--- a/nbs/fredapi2.ipynb
+++ b/nbs/fredapi2.ipynb
@@ -77,7 +77,7 @@
     "        \"\"\"\n",
     "        Initialize the Fred class that provides useful functions to query the Fred dataset. You need to specify a valid\n",
     "        API key in one of 3 ways: pass the string via api_key, or set api_key_file to a file with the api key in the\n",
-    "        first line, or set the environment variable 'FRED_API_KEY' to the value of your api key. You can sign up for a\n",
+    "        first line, or set the environment variable `FRED_API_KEY` to the value of your api key. You can sign up for a\n",
     "        free api key on the Fred website at http://research.stlouisfed.org/fred2/\n",
     "        \"\"\"\n",
     "        self.api_key = None\n",
